--- a/FoodDelivery/Pages/Admin/Categories/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/Categories/Index.cshtml
@@ -5,30 +5,32 @@
     ViewData["Title"] = "Categories";
 }
 
-<h1>Categories</h1>
-
-<div class="container">
-    <div class="row">
-        <div class="col-12 text-end">
+<div class="border backgroundWhite container p-3">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-primary">Category List</h2>
+        </div>
+        <div class="col-6 text-end">
             <a asp-page="Upsert" asp-route-itemid="0" class="btn btn-primary">
                 <i class="fa-solid fa-plus"></i>&nbsp;Create New
             </a>
         </div>
     </div>
+    <br /><br />
+    <table class="table table-striped table bordered" id="DT_load" style="width:100%">
+        <thead>
+            <tr>
+                <th>
+                    Category Name
+                </th>
+                <th>
+                    Display Order
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+    </table>
 </div>
-<table id="DT_load" class="table table-striped table bordered">
-    <thead>
-        <tr>
-            <th>
-                Category Name
-            </th>
-            <th>
-                Display Order
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-</table>
 @section Scripts{
     <script src="~/js/category.js"></script>
 }
