--- a/FoodDelivery/Pages/Admin/Categories/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/Categories/Index.cshtml
@@ -11,7 +11,7 @@
             <h2 class="text-primary">Category List</h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-page="Upsert" asp-route-itemid="0" class="btn btn-primary">
+            <a asp-page="Upsert" asp-route-id="0" class="btn btn-primary">
                 <i class="fa-solid fa-plus"></i>&nbsp;Create New
             </a>
         </div>
