--- a/FoodDelivery/Pages/Admin/MenuItems/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/MenuItems/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="border backgroundWhite container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Food Type List</h2>
+            <h2 class="text-primary">Menu Items</h2>
         </div>
         <div class="col-6 text-end">
             <a asp-page="Upsert" asp-route-id="0" class="btn btn-primary">
