--- a/FoodDelivery/Pages/Shared/_Layout.cshtml
+++ b/FoodDelivery/Pages/Shared/_Layout.cshtml
@@ -27,8 +27,8 @@
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/FoodTypes/Index">Food Types</a>
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/MenuItems/Index">Menu Items</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" asp-area="Identity" asp-page="/Admin/Users/Index">Users</a>
-                                    <a class="dropdown-item" asp-area="Identity" asp-page="/Admin/Roles/Index">Roles</a>
+                                    <a class="dropdown-item" asp-area="" asp-page="/Admin/Users/Index">Users</a>
+                                    <a class="dropdown-item" asp-area="" asp-page="/Admin/Roles/Index">Roles</a>
                                 </div>
                         </li>
                         <li class="nav-item">
