--- a/FoodDelivery/Pages/Shared/_Layout.cshtml
+++ b/FoodDelivery/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Infrastructure.Utilities
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -6,8 +9,12 @@
     <title>@ViewData["Title"] - Food Delivery</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.14.1/themes/base/jquery-ui.min.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/2.2.2/css/dataTables.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.14.1/jquery.timepicker.min.css" />
+
 </head>
 <body class="search-background">
     <header>
@@ -15,13 +22,15 @@
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index"><img src="~/images/logo.jpg" alt="Food Delivery Logo"/></a>
                 <button class="navbar-toggler text-b" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation" data-control="navbarSupportedContent">
+                aria-expanded="false" aria-label="Toggle navigation" data-control="navbarSupportedContent">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse text-white collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin</a>
+                        @if (User.IsInRole(SD.AdminRole))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link text-white dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin</a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/Categories/Index">Categories</a>
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/FoodTypes/Index">Food Types</a>
@@ -30,16 +39,27 @@
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/Users/Index">Users</a>
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/Roles/Index">Roles</a>
                                 </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Admin/Order/ManageOrder">Manage Orders</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Admin/Order/OrderList">Order Deliveries</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Customer/Cart/Index"><i class="fa-solid fa-cart-shopping"></i> (0)</a>
-                        </li>
+                            </li>
+                        }
+                        @if (User.IsInRole(SD.AdminRole) || User.IsInRole(SD.KitchenRole))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-page="/Admin/Order/ManageOrder">Manage Orders</a>
+                            </li>
+                        }
+                        @if (User.IsInRole(SD.AdminRole) || User.IsInRole(SD.DriverRole))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-page="/Admin/Order/OrderList">Order Deliveries</a>
+                            </li>
+                        }
+                        @if(User.IsInRole(SD.CustomerRole)){
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-page="/Customer/Cart/Index">
+                                    <i class="fas fa-shopping-cart"></i> (@(HttpContextAccessor.HttpContext.Session.GetInt32(SD.ShoppingCart) ?? 0))
+                                </a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -65,6 +85,9 @@
     <script src="https://cdn.datatables.net/2.2.2/js/dataTables.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.14.1/jquery.timepicker.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.14.1/jquery-ui.min.js"></script>
     <script src="~/lib/tinymce/js/tinymce/tinymce.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
