--- a/FoodDelivery/Pages/Customer/Cart/OrderConfirmation.cshtml
+++ b/FoodDelivery/Pages/Customer/Cart/OrderConfirmation.cshtml
@@ -11,6 +11,6 @@
     <div class="col-12 text-center" style="color:maroon">
         <br />
         Your order has been placed successfully! <br />
-        <a asp-page="../index">Back Home</a>
+        <a asp-page="/Index">Back Home</a>
     </div>
 </div>
