--- a/FoodDelivery/Pages/Shared/_Layout.cshtml
+++ b/FoodDelivery/Pages/Shared/_Layout.cshtml
@@ -89,6 +89,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.14.1/jquery.timepicker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.14.1/jquery-ui.min.js"></script>
     <script src="~/lib/tinymce/js/tinymce/tinymce.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
