Made M:M Relationship Between FoodType and MenuItem

--- a/FoodDelivery/Pages/Admin/MenuItems/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/MenuItems/Index.cshtml
@@ -27,7 +27,7 @@
                     Category
                 </th>
                 <th>
-                    Food Type
+                    Food Types
                 </th>
                 <th></th>
             </tr>
