--- a/FoodDelivery/Pages/Customer/Home/Index.cshtml
+++ b/FoodDelivery/Pages/Customer/Home/Index.cshtml
@@ -24,8 +24,11 @@
                                         </div>
                                         <div class="d-flex justify-content-between form-control"
                                              style="border:0px;">
-                                            <div class="col-6 badge rounded-pill bg-warning text-center">
-                                                <h6>@menuItem.FoodType.Name</h6>
+                                            <div class="col-6 text-center">
+                                                @foreach (var mft in menuItem.MenuItemFoodTypes)
+                                                {
+                                                    <span class="badge bg-warning mx-1">@mft.FoodType.Name</span>
+                                                }
                                             </div>
                                             <div class="col-6 text-end h4" style="color:maroon; max-width:70%">
                                                 <b>$@menuItem.Price.ToString("0.00")</b>
