--- a/FoodDelivery/Pages/Customer/Home/Details.cshtml
+++ b/FoodDelivery/Pages/Customer/Home/Details.cshtml
@@ -29,7 +29,10 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <span class="badge bg-warning h3">@Model.objMenuItem.Category.Name</span>
-                                        <span class="badge bg-dark">@Model.objMenuItem.FoodType.Name</span>
+                                        @foreach (var mft in Model.objMenuItem.MenuItemFoodTypes)
+                                        {
+                                            <span class="badge bg-dark">@mft.FoodType.Name</span>
+                                        }
                                         <h3 class="text-success"></h3>
                                         <p class="text-secondary">@Html.Raw(Model.objMenuItem.Description)</p>
                                         <div class="row py-4">
