--- a/FoodDelivery/Pages/Shared/_Layout.cshtml
+++ b/FoodDelivery/Pages/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/FoodTypes/Index">Food Types</a>
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/MenuItems/Index">Menu Items</a>
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/PromoCodes/Index">Promo Codes</a>
+                                    <a class="dropdown-item" asp-area"" asp-page="/Admin/RewardPoints/Index">Reward Points</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/Users/Index">Users</a>
                                     <a class="dropdown-item" asp-area="" asp-page="/Admin/Roles/Index">Roles</a>
